Details
- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
Minor
 - 
    None
 
Description
1. Do not show TaskBar Properties window in TaskBar;
2. Do not allow multiple TaskBar Properties windows.
While patch works (using global variable), I have concerns about functions returning NULL:
trayprop.c, line 436;
traywnd.c, line 1770
Line numbers when patch applied.
Comments about that added into code.
Patch by Edijs Kolesnikovičs and Grégori Macário Harbs.