[EXPLORER_NEW] - Do not allow multiple "Taskbar and Start Menu Properties" windows. Based on patch by Edijs Kolesnikovičs & Grégori Macário Harbs. CORE-6885 #resolve

svn path=/trunk/; revision=58217